--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,33 +1,151 @@
-body{
-    background-color: black;
-    color: white;
+body::-webkit-scrollbar {
+    display: none;
 }
 
+html, body {
+    overflow: auto;
+    height: 100%;
+}
+
+body{
+    scrollbar-width: none;
+    background-color: black;
+    color: white;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
+}
+
+a{
+  text-decoration: none;
+  color: white;
+}
+
+button{
+    border: none;
+    background-color: #d17f36;
+    cursor: pointer;
+    color: black;
+}
 
 .seccion-header{
     display: flex;
+    padding: 5px;
+}
+
+#header-seccion1{
+    background-color: #d17f36;
+}
+
+#header-seccion2{
+    display: flex;
+    flex-direction: row;
+}
+
+#a-sm{
+    display: flex;
+    padding: 10px;
+    margin-left: auto;
+}
+
+#p-h{
+    display: flex;
+    padding: 10px;
 }
 
 #barra-nav{
     display: flex;
-    
+    align-items: center;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding: 5px;
 }
 
 #barra-nav  ul {
+    display: flex;
     list-style-type: none;
     padding: 10px;
 }
 
 
 #barra-nav  ul  li{
-    float: left;
     padding: 10px;
 }
 
 .redes-sociales{
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 75%;
     height: auto;
-    padding: 5px;
 }
+
+#logo-inicio{
+    margin: 10px;
+    padding: 10px;
+    width: 5rem;
+    height: auto;
+}
+
+#btn-buscar{
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 10cm;
+    height: auto;
+    color: #d17f36;
+    border: 2px solid;
+    border-radius: 1rem;
+    border-color: #d17f36;
+    background-color: transparent;
+}
+
+#nav-opciones{
+    display: flex;
+    margin-left: 10px;
+}
+
+#reddot{
+    padding: 5px;
+    width: 13px;
+    height: 13px;
+}
+
+#btn-avatar img{
+    display: block;
+    width: 50px;
+    height: auto;
+    margin-left: auto;
+    
+}
+
+#avatar-carrito {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 5px;
+    width: 100%;
+}
+
+
+#btn-carrito{
+    width: auto;
+    height: auto;
+    margin: 0;
+    background-color: transparent;
+}
+
+#btn-avatar{
+    background-color: transparent;
+}
+
+
+#btn-carrito svg{
+    display: block;
+    padding: 1px;
+    margin: none;
+}
+
+
+
+
+
+
